RESOLVED FIXED 136429
[ARM] MacroAssembler generating incorrect code on ARM32 Traditional
https://bugs.webkit.org/show_bug.cgi?id=136429
Summary [ARM] MacroAssembler generating incorrect code on ARM32 Traditional
Dániel Bátyai
Reported 2014-09-01 09:15:54 PDT
At MacroAssemblerARM.h:945 we check if the value in reg is zero, but the 0 in cmp was being interpreted as r0 instead of a constant.
Attachments
Patch (1.36 KB, patch)
2014-09-01 09:20 PDT, Dániel Bátyai
no flags
Dániel Bátyai
Comment 1 2014-09-01 09:20:53 PDT
Created attachment 237452 [details] Patch Changed test32 to use tst instead of cmp to check if reg is zero.
WebKit Commit Bot
Comment 2 2014-09-02 10:01:45 PDT
Comment on attachment 237452 [details] Patch Clearing flags on attachment: 237452 Committed r173179: <http://trac.webkit.org/changeset/173179>
WebKit Commit Bot
Comment 3 2014-09-02 10:01:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.