[ARM] MacroAssembler generating incorrect code on ARM32 Traditional https://bugs.webkit.org/show_bug.cgi?id=136429

Reviewed by Csaba Osztrogonác.

Changed test32 to use tst to check if reg is zero, instead of cmp.

* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::test32):


Canonical link: https://commits.webkit.org/154249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173179 268f45cc-cd09-0410-ab3c-d52691b4dbfc